{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 51,
  "lineage": "f204e098-5186-a594-a4dc-556797873b2f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0761dd91277e34178",
            "arn": "arn:aws:ec2:us-east-1:165382242001:instance/i-0ee2085b8e4870f74",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3_ec2_profile",
            "id": "i-0ee2085b8e4870f74",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0be9854e10099013f",
            "private_dns": "ip-10-20-0-62.ec2.internal",
            "private_ip": "10.20.0.62",
            "public_ip": "54.88.31.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01e4e699fb9f8c4cf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003427291aad165e6",
            "tags": {
              "Environment": "dev",
              "Name": "webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04a8a897414d4a59f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.s3_ec2_profile",
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.my_app"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0761dd91277e34178",
            "arn": "arn:aws:ec2:us-east-1:165382242001:instance/i-04f9382ad487de221",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3_ec2_profile",
            "id": "i-04f9382ad487de221",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03428c879fafa2560",
            "private_dns": "ip-10-20-1-79.ec2.internal",
            "private_ip": "10.20.1.79",
            "public_ip": "54.82.113.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01ff6c6db91cb9ea8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09192c352c3d432cb",
            "tags": {
              "Environment": "dev",
              "Name": "webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04a8a897414d4a59f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.s3_ec2_profile",
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.my_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165382242001:internet-gateway/igw-0d70ff95642679a48",
            "id": "igw-0d70ff95642679a48",
            "owner_id": "165382242001",
            "tags": {
              "Name": "anil-igw"
            },
            "vpc_id": "vpc-0983037e0d89db32a"
          },
          "dependencies": [
            "aws_vpc.my_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07886cac3bca08393",
            "owner_id": "165382242001",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d70ff95642679a48",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "anil-prt"
            },
            "vpc_id": "vpc-0983037e0d89db32a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fcc8724f135a402",
            "route_table_id": "rtb-07886cac3bca08393",
            "subnet_id": "subnet-003427291aad165e6"
          },
          "dependencies": [
            "aws_route_table.prt",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6ca74011aeb48ef",
            "route_table_id": "rtb-07886cac3bca08393",
            "subnet_id": "subnet-09192c352c3d432cb"
          },
          "dependencies": [
            "aws_route_table.prt",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b50979f1f8452f16",
            "route_table_id": "rtb-07886cac3bca08393",
            "subnet_id": "subnet-0a54b53961db69c81"
          },
          "dependencies": [
            "aws_route_table.prt",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09229f04abaf78cf5",
            "route_table_id": "rtb-07886cac3bca08393",
            "subnet_id": "subnet-090306c6278c47c4f"
          },
          "dependencies": [
            "aws_route_table.prt",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055650669aadd1e90",
            "route_table_id": "rtb-07886cac3bca08393",
            "subnet_id": "subnet-0c07a66d7694d32ab"
          },
          "dependencies": [
            "aws_route_table.prt",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba2aa5fe99cb1ac1",
            "route_table_id": "rtb-07886cac3bca08393",
            "subnet_id": "subnet-03b68c737fbc81696"
          },
          "dependencies": [
            "aws_route_table.prt",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165382242001:security-group/sg-04a8a897414d4a59f",
            "description": "Allow traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a8a897414d4a59f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "anil-web-securitygroup",
            "name_prefix": "",
            "owner_id": "165382242001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "anil-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0983037e0d89db32a"
          },
          "dependencies": [
            "aws_vpc.my_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165382242001:subnet/subnet-0ca1bd7319f7ef396",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.6.0/24",
            "id": "subnet-0ca1bd7319f7ef396",
            "map_public_ip_on_launch": true,
            "owner_id": "165382242001",
            "tags": {
              "Name": "privatesubnet-1"
            },
            "vpc_id": "vpc-0983037e0d89db32a"
          },
          "dependencies": [
            "aws_vpc.my_app"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165382242001:subnet/subnet-0c5d555445b46692f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.7.0/24",
            "id": "subnet-0c5d555445b46692f",
            "map_public_ip_on_launch": true,
            "owner_id": "165382242001",
            "tags": {
              "Name": "privatesubnet-2"
            },
            "vpc_id": "vpc-0983037e0d89db32a"
          },
          "dependencies": [
            "aws_vpc.my_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165382242001:subnet/subnet-003427291aad165e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.0.0/24",
            "id": "subnet-003427291aad165e6",
            "map_public_ip_on_launch": true,
            "owner_id": "165382242001",
            "tags": {
              "Name": "publicsubnet-1"
            },
            "vpc_id": "vpc-0983037e0d89db32a"
          },
          "dependencies": [
            "aws_vpc.my_app"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165382242001:subnet/subnet-09192c352c3d432cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-09192c352c3d432cb",
            "map_public_ip_on_launch": true,
            "owner_id": "165382242001",
            "tags": {
              "Name": "publicsubnet-2"
            },
            "vpc_id": "vpc-0983037e0d89db32a"
          },
          "dependencies": [
            "aws_vpc.my_app"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165382242001:subnet/subnet-0a54b53961db69c81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-0a54b53961db69c81",
            "map_public_ip_on_launch": true,
            "owner_id": "165382242001",
            "tags": {
              "Name": "publicsubnet-3"
            },
            "vpc_id": "vpc-0983037e0d89db32a"
          },
          "dependencies": [
            "aws_vpc.my_app"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165382242001:subnet/subnet-090306c6278c47c4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.3.0/24",
            "id": "subnet-090306c6278c47c4f",
            "map_public_ip_on_launch": true,
            "owner_id": "165382242001",
            "tags": {
              "Name": "publicsubnet-4"
            },
            "vpc_id": "vpc-0983037e0d89db32a"
          },
          "dependencies": [
            "aws_vpc.my_app"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165382242001:subnet/subnet-0c07a66d7694d32ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.20.4.0/24",
            "id": "subnet-0c07a66d7694d32ab",
            "map_public_ip_on_launch": true,
            "owner_id": "165382242001",
            "tags": {
              "Name": "publicsubnet-5"
            },
            "vpc_id": "vpc-0983037e0d89db32a"
          },
          "dependencies": [
            "aws_vpc.my_app"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165382242001:subnet/subnet-03b68c737fbc81696",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.20.5.0/24",
            "id": "subnet-03b68c737fbc81696",
            "map_public_ip_on_launch": true,
            "owner_id": "165382242001",
            "tags": {
              "Name": "publicsubnet-6"
            },
            "vpc_id": "vpc-0983037e0d89db32a"
          },
          "dependencies": [
            "aws_vpc.my_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165382242001:vpc/vpc-0983037e0d89db32a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-03892faa5cd2e83ca",
            "default_route_table_id": "rtb-00b6e04e9e08956a1",
            "default_security_group_id": "sg-064cfa80d47df30af",
            "dhcp_options_id": "dopt-4b4ec431",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0983037e0d89db32a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00b6e04e9e08956a1",
            "owner_id": "165382242001",
            "tags": {
              "Enivronment": "dev",
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}